# ArduinoAirSuspensionController

./: .gitignore  CLAUDE.md  README.md  test_fastled.c
3d Prints/: Manifold Base.stl  Manifold Hat.stl  Manifold Lid (no pcb supports).stl  Short Manifold Hat (no screen).stl  Tall Manifold Hat (no screen).stl  Tall Manifold Hat.stl  Tall Manifold Lid.stl  Waveshare 2.8 Controller (v30).stl  Waveshare 2.8 Controller (v37).stl  (+4 more)
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/Audio_Driver/: PCM5101.c  PCM5101.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/BAT_Driver/: BAT_Driver.c  BAT_Driver.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/LCD_Driver/: ST7789.c  ST7789.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.c  Vernon_ST7789T.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_Music.c  LVGL_Music.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/PCF85063/: PCF85063.c  PCF85063.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/PWR_Key/: PWR_Key.c  PWR_Key.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/SD_Card/: SD_MMC.c  SD_MMC.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/Touch_Driver/: CST328.c  CST328.h
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/Touch_Driver/esp_lcd_touch/: esp_lcd_touch.c
Wireless_Controller/device_libs/ws2p8/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/Wireless/: Wireless.c
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/BAT_Driver/: BAT_Driver.c  BAT_Driver.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/Buzzer/: Buzzer.c  Buzzer.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/LCD_Driver/: ST7701S.c  ST7701S.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/PCF85063/: PCF85063.c  PCF85063.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/QMI8658/: QMI8658.c
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/SD_Card/: SD_MMC.c  SD_MMC.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/Touch_Driver/: GT911.c  GT911.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/Touch_Driver/esp_lcd_touch/: esp_lcd_touch.h
Wireless_Controller/device_libs/ws2p8b/ESP-IDF/ESP32-S3-Touch-LCD-2.8B-Test/main/Wireless/: Wireless.c  Wireless.h
Wireless_Controller/device_libs/ws3p5b/ESP-IDF/03_pcf85063_example/components/esp_bsp/: CMakeLists.txt  bsp_display.h  bsp_i2c.h  bsp_qmi8658.c  bsp_sdcard.c  bsp_wifi.c
(+813 files in other folders)
